syntax = "proto3";
package tankio;

option csharp_namespace = "GGM.Proto.Tank";

enum MSGID
{
    S_ENTER = 0;
    S_INIT = 1;
    C_ENTER = 2;
    S_INITLIST =3;

    C_POS = 90;
    S_POS = 91;
}

message C_Pos
{
    int32 x = 1;
    int32 y = 2;
}


message S_Pos
{
    int32 x = 1;
    int32 y = 2;
}

message Position
{
    float rotate = 1;
    float x  = 2;
    float y = 3;
}

message S_Init
{
    int32 playerID = 1;
    Position position = 2;
}

message SMove
{
    int32 playerId = 1;
    float x =2;
    float y = 3;
}